RESOLVED FIXED18104
REGRESSION: LEAK: 2 InlineBox in editing/inserting/12882.html
https://bugs.webkit.org/show_bug.cgi?id=18104
Summary REGRESSION: LEAK: 2 InlineBox in editing/inserting/12882.html
mitz
Reported 2008-03-25 23:43:17 PDT
editing/inserting/12882.html leaks two InlineBox instances. This is a regression from the incremental line layout with floats patch(es).
Attachments
Make sure to destroy unmatched clean lines (2.28 KB, patch)
2008-03-26 13:40 PDT, mitz
andersca: review+
mitz
Comment 1 2008-03-26 01:20:02 PDT
// If a float's geometry has changed, give up on syncing with clean lines. if (floats[floatIndex].rect != IntRect(f->m_left, f->m_top, f->m_width, f->m_bottom - f->m_top)) endLine = 0; The idea was to avoid the endLineMatched condition, but zeroing out endLine also avoids the "Delete all the remaining lines" branch, leading to the leak.
mitz
Comment 2 2008-03-26 13:40:14 PDT
Created attachment 20096 [details] Make sure to destroy unmatched clean lines No layout test regressions
Anders Carlsson
Comment 3 2008-03-26 13:48:06 PDT
Comment on attachment 20096 [details] Make sure to destroy unmatched clean lines r=me
mitz
Comment 4 2008-03-26 13:54:32 PDT
Note You need to log in before you can comment on or make changes to this bug.