2008-03-26  Dan Bernstein  <mitz@apple.com>

Reviewed by Anders Carlsson.

        - fix http://bugs.webkit.org/show_bug.cgi?id=18104
          REGRESSION: LEAK: 2 InlineBox in editing/inserting/12882.html

        * rendering/bidi.cpp:
        (WebCore::RenderBlock::layoutInlineChildren): When deciding to ditch
        old clean lines (due to changed or newly-added floats), keep the
        reference to those lines so they can be properly deleted in the end,
        and use a separate flag to signal that no matching should be attempted.



Canonical link: https://commits.webkit.org/24994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31328 268f45cc-cd09-0410-ab3c-d52691b4dbfc